# bmi_sdd

./: .gitignore  .slugignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.specify/memory/: constitution.md
specs/001-bmi-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bmi-calculator/checklists/: pre-impl.md  requirements.md
specs/001-bmi-calculator/contracts/: api-bmi.md  api-health.md
specs/002-bmi-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bmi-history/checklists/: pr-review.md  requirements.md
specs/002-bmi-history/contracts/: api.md
src/: api.rs  domain.rs  lib.rs  main.rs  ui.rs
tests/: api_test.rs
